Also removed Pyrite